--- a/labs/5-1/bromodomains_health_report.ipynb
+++ b/labs/5-1/bromodomains_health_report.ipynb
@@ -4,6 +4,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# YANK Simulation YAML Input File"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "options:\n",
+    "  verbose: yes\n",
+    "  temperature: 300*kelvin\n",
+    "  pressure: 1.0*atmosphere\n",
+    "  minimize: yes\n",
+    "  number_of_equilibration_iterations: 100\n",
+    "  equilibration_timestep: 1.0*femtosecond\n",
+    "  default_number_of_iterations: 5000\n",
+    "  default_nsteps_per_iteration: 500\n",
+    "  default_timestep: 2.0*femtosecond\n",
+    "  platform: fastest\n",
+    "  output_dir: bromo_d25_1\n",
+    "  resume_simulation: yes\n",
+    "\n",
+    "solvents:\n",
+    "  vacuum:\n",
+    "    nonbonded_method: NoCutoff\n",
+    "  pme:\n",
+    "    nonbonded_method: PME\n",
+    "    nonbonded_cutoff: 10.0*angstroms\n",
+    "    switch_distance: 9.0*angstroms\n",
+    "    solvent_model: tip3p\n",
+    "    rigid_water: True\n",
+    "    positive_ion: Na+\n",
+    "    negative_ion: Cl-\n",
+    "    ionic_strength: 0.001*molar\n",
+    "    leap:\n",
+    "      parameters: [leaprc.water.tip4pew]\n",
+    "  implicit:\n",
+    "    implicit_solvent: OBC2\n",
+    "    implicit_solvent_salt_conc: 100*millimolar\n",
+    "\n",
+    "systems:\n",
+    "  rec-lig:\n",
+    "    phase1_path: [complex.prmtop, complex.inpcrd]\n",
+    "    phase2_path: [vacuum.prmtop, vacuum.inpcrd]\n",
+    "    ligand_dsl: resname LIG\n",
+    "    solvent: implicit\n",
+    "\n",
+    "protocols:\n",
+    "  absolute-binding:\n",
+    "    complex:\n",
+    "      trailblazer_options:\n",
+    "        thermodynamic_distance: 0.25  # This is the thermodynamic length between states in units of kT.\n",
+    "        n_samples_per_state: 250  # This is the number of samples used to estimate the thermodynamic length.\n",
+    "      alchemical_path: auto\n",
+    "    solvent:\n",
+    "      trailblazer_options:\n",
+    "        thermodynamic_distance: 0.25\n",
+    "        n_samples_per_state: 250\n",
+    "      alchemical_path: auto\n",
+    "\n",
+    "experiments:\n",
+    "  system: rec-lig\n",
+    "  protocol: absolute-binding\n",
+    "  restraint:\n",
+    "    type: FlatBottom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# YANK Simulation Health Report"
    ]
   },
